# renovate-approve-bot

./: .justfile  Cargo.toml  Dockerfile  Dockerfile.dockerignore  README.md  renovate.json
.woodpecker/: deploy.yaml  lint.yaml  test.yaml  verify.yaml
src/: configuration.rs  forgejo.rs  main.rs
