[package]
name = "renovate-approve-bot"
description = "Bot to approve pull requests made by Renovate in Forgejo/Gitea."
authors = ["Stephan Schnabel <stephan@schnabel.org>"]
keywords = ["forgejo", "gitea", "renovate"]
categories = ["command-line-utilities"]
exclude = [".*", "renovate.json", "Dockerfile", "Dockerfile.dockerignore"]
repository = "https://git.kokuwa.io/kokuwaio/renovate-approve-bot"
version = "0.0.3-dev"
license = "EUPL-1.2"
edition = "2024"
rust-version = "1.88.0"

[[bin]]
name = "renovate-approve-bot"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.40", default-features = false, features = ["std", "help", "derive"] }
log = "0.4.27"
env_logger =  { version ="0.11.8", default-features = false, features = ["auto-color"] }
reqwest = { version = "0.12.22", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0.215", features = ["derive"] }

[profile.release]
strip = true
